CHANGES INTRODUCED IN XINS 0.206:

* XINS/Java Server Framework:
  - Removed the _GetLogStatistics meta function.
  - Removed some unused fields in CallContext.
  - Removed references to the ServletRequest in Function, API and CallContext.
  - Merged FormattedInputParameters and FormattedOutputParameters in one
    class FormattedParameters.
  - Removed unused import statements.

* XINS/Java Common Library:
  - Reabilitated the ServletRequestPropertyReader removed in the previous
    version as it's now used by the server framework.
  - Removed unused import statements.

* XINS/Java Client Framework:
  - Removed unused import statements.

* Logdoc:
  - Removed the counter that counted the number of time that a log was
    invoked.

* Moved the bin directory from xins/src to xins directory.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.205:

* XINS/Java Server Framework:
  - Replaced some tabs in the code by spaces.
  - The functions returns _InternalError when the API is deinitializing.
  - The FileWatcher is stopped when the API is stopped.
  - Adding some logs when bootstrapping or stopping the API.
  - Improved exception message for the AccessDeniedException and the
    NoSuchFunctionException.
  - Added some getter methods to get more information for the
    AccessDeniedException and the NoSuchFunctionException.
  - Fixed some Javadoc.
  - Replaced JDom element by org.xins.server.Element.
  - Removed the interface CallResult and the implementations, the result
    is now stored in FunctionResult.

* XINS/Java Common Library:
  - Replaced some tabs in the code by spaces.
  - Set constants in HexConverter as static class fields.
  - Added the possibility for the HexConverter to convert hexadecimal numbers
    that contain uppercases A to F.
  - Fixed some Javadoc.
  - Removed unused files BooleanConstants, FastStack, FixedArraySet,